simonsen radio interview added

--- a/child_pages/cc-elections/Candidates/driver.html
+++ b/child_pages/cc-elections/Candidates/driver.html
@@ -158,7 +158,8 @@
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis can-sec">
                 <ul>
-                    <li>Safety and Security of every student regardless of race, gender, creed, or faith. The school is meant to be a hub of the public and can only be if all of 
+                    <li>Safety and Security of every student regardless of race, gender, creed, or faith. The school is meant to be a hub of the public and can only be if 
+                        all of 
                     the public is welcomed. </li>
                     <br>
                     <li>Fighting for transparency between admin, staff & the community</li>
