--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -252,11 +252,124 @@
 
     <br>
 
-    <div class="video-box-modal can-sec">
-        <h3 class="video-heading">Assembly GOP Video Biography</h3>
+    <details>
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
+        <div class="video-box-modal can-sec">
+            <h3 class="video-heading">Assembly GOP Video Biography</h3>
 
-        <iframe src="https://www.youtube.com/embed/l97fGHGgP_8?si=J_X4daBTXe1b7y7y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+            <iframe src="https://www.youtube.com/embed/l97fGHGgP_8?si=J_X4daBTXe1b7y7y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <div class="video-box-modal can-sec">
+            <h3 class="video-heading">InformTheVoteNJ Radio Hour Interview</h3>
+
+            <iframe src="https://www.youtube.com/embed/EeJhM-jFOM4?si=juobzQ0G_lx0EaTh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+        
+            <br>
+            <br>
+
+            <details>
+                <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                <br>
+                <br>
+                <div style="padding: 15px 25px; text-align: left;">
+                    <p>In this Inform the Vote NJ Radio Hour interview, Assemblyman Erik Simonsen (LD1) joins Steven Solof for an in-depth discussion about his background, legislative priorities, and campaign for re-election. Drawing on his experience as an educator, coach, musician, and deacon, Simonsen explains how these roles have shaped his approach to lawmaking and constituent service in South Jersey.</p>
+
+                    <p><strong>Legislative Record and Policy Priorities:</strong><br>
+                    Simonsen highlights his work on anti-Semitism legislation, disability rights, education, and extracurricular compensation. He frames his record as bipartisan and focused on protecting South Jersey’s unique way of life, from agriculture and tourism to tipping culture.</p>
+
+                    <p><strong>Background and Experience:</strong><br>
+                    With over 30 years in education and long-time service as a coach, professional musician, and church deacon, Simonsen shares how these roles taught him creativity, communication, and community leadership—qualities he carries into legislative debates and committee work.</p>
+
+                    <p><strong>Civic Engagement and Reform Ideas:</strong><br>
+                    The interview explores Simonsen’s strong support for reintroducing civics education, improving campaign transparency through county-facilitated candidate information, and ensuring voters better understand how local government functions.</p>
+
+                    <p><strong>Social Issues and Reproductive Rights:</strong><br>
+                    Simonsen outlines his personal pro-life stance while supporting exceptions and describing abortion as a states’ rights issue. He signals openness to compromise approaches like those discussed by gubernatorial candidates.</p>
+
+                    <p><strong>Final Thoughts:</strong><br>
+                    Beyond legislation, Simonsen emphasizes constituent services, local events, and grassroots engagement as the true measure of effective representation. This interview provides voters a direct look at his “body of work” and the principles guiding his re-election campaign.</p>
+                </div>
+                </details>
+
+                <br>
+                <br>
+
+                <details>
+                <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                <div class="video-summary" style="margin-top: 1em;">
+                    <h2>Interview Summary – Erik Simonsen</h2>
+                    <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+                    <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                    <thead>
+                        <tr>
+                        <th style="text-align: left;">Timestamp</th>
+                        <th style="text-align: left;">Topic</th>
+                        <th style="text-align: left;">Key Takeaways</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                        <td>0:00</td>
+                        <td>Introductory Report</td>
+                        <td>Steven frames the origins of Inform the Vote NJ and emphasizes the importance of transparency and accessible candidate information.</td>
+                        </tr>
+                        <tr>
+                        <td>6:25</td>
+                        <td>Anti-Semitism Bill</td>
+                        <td>Simonsen describes a 10-hour session on anti-Semitism legislation. Notes bipartisan support after free speech concerns were removed, and stresses the difference between protest and harassment.</td>
+                        </tr>
+                        <tr>
+                        <td>10:45</td>
+                        <td>Background & Bio</td>
+                        <td>Born in Cape May/Lower Twp. Served 32 years in education as teacher and administrator, longtime coach, professional musician, and deacon for 30 years. Committee work on education, disabilities, and local government.</td>
+                        </tr>
+                        <tr>
+                        <td>15:30</td>
+                        <td>Education → Legislature</td>
+                        <td>Explains how teaching and coaching special needs students taught him communication and adaptability, skills he applies in legislative debates. Prefers speaking off-the-cuff rather than rehearsed.</td>
+                        </tr>
+                        <tr>
+                        <td>19:40</td>
+                        <td>Coaching, Compensation & Public Service Pay</td>
+                        <td>Calls for fairer pay for coaches and extracurricular leaders, connecting the issue to underpaid public officials and the challenges of constant campaigning under 2-year Assembly terms.</td>
+                        </tr>
+                        <tr>
+                        <td>25:35</td>
+                        <td>College-to-Workforce Transition (Disabilities)</td>
+                        <td>Discusses legislation to create workforce guides for students with disabilities. Frames it as ensuring ROI for education, particularly important for disabled students entering the workforce.</td>
+                        </tr>
+                        <tr>
+                        <td>30:00</td>
+                        <td>Campaign Message – “Body of Work”</td>
+                        <td>Defends LD1’s bipartisan record despite being in the minority. Highlights tourism, agriculture, and tipping culture as pillars of South Jersey’s way of life, warning against North Jersey-centric policymaking.</td>
+                        </tr>
+                        <tr>
+                        <td>38:30</td>
+                        <td>Advocacy Idea #1 – Local Civics Education</td>
+                        <td>Supports reintroducing civics in schools. Notes many residents don’t understand assemblymen or planning boards, calling civics education a top priority for a stronger democracy.</td>
+                        </tr>
+                        <tr>
+                        <td>48:20</td>
+                        <td>Advocacy Idea #2 – County Candidate Information</td>
+                        <td>Backs requiring candidates to answer baseline questions when filing to run. Believes it would expose those “running for the wrong reasons.”</td>
+                        </tr>
+                        <tr>
+                        <td>50:30</td>
+                        <td>Abortion Policy Stance</td>
+                        <td>Identifies abortion as a states’ rights issue. Personally pro-life with exceptions for the mother’s life and certain cases. Opposes third-trimester abortions. Comfortable with Jack Ciattarelli’s “reasonable compromise.”</td>
+                        </tr>
+                        <tr>
+                        <td>54:15</td>
+                        <td>Closing Thoughts</td>
+                        <td>Encourages voters to review his voting record but stresses that direct constituent engagement—through events, music, and outreach—remains the foundation of his public service.</td>
+                        </tr>
+                    </tbody>
+                    </table>
+                </div>
+                </details>
+        </div>
+    </details>
 
     <br>
             
