start of linda miletta page

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -134,25 +134,28 @@
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close">
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Douglas Albrecht</h6>
-              <p> Thomas McGinty is running for Millville City Commissioner on a practical platform of cleanup, safety, and redevelopment. A lifelong 
-                Millville resident, he brings decades of experience as a geologist and NJDEP federal case manager in hazardous-site remediation, plus 
-                frontline leadership as a retired NJDOC lieutenant. Early in the campaign he answered a detailed questionnaire, completed a 2.5-hour 
-                podcast, and sat for a full radio interview—giving voters a clear sense of his background, governing style, and priorities.
-                 <br> <br> 
-                 His 2025 agenda centers on converting legacy industrial parcels—especially the Wheaton property—into brownfield-ready sites and then 
-                 doing the administrative push to land tenants. He pairs that with strengthening public safety and recruitment (including visible walking 
-                 patrols and better inter-agency coordination), tighter code enforcement and fair/open bidding, and setting predictable service standards 
-                 at City Hall. McGinty also wants Millville to leverage the Maurice River’s eco-tourism potential and advance long-discussed access 
-                 improvements like the Outer Connector/Nabb Avenue Extension to better link jobs, the airport, and industrial corridors. He frames himself 
-                 as a team-first, “nuts-and-bolts” commissioner focused on execution rather than titles. 
-                 <br> <br>
-                 Transparency and accessibility are currently <em>above average</em> by local norms, thanks to early, substantive engagement. 
-                 To reach a top-tier standard, he has signaled interest in a clean campaign site with issue-by-issue pages, a public calendar of appearances, 
-                 documented Q&amp;A and interviews, and measurable milestones for brownfields, blight/code benchmarks, and youth-safety initiatives. 
-                 If those pieces are delivered and kept current, voters will be able to track both plans and follow-through in one place. 
-                 <br> <br>
-                  Click the red x at the top of this box and then scroll down down for more in-depth information and sources. 
-                </p>
+              <p>          
+
+                Doug Albrecht is seeking his third term on the Cumberland County Board of Commissioners, bringing years of business experience, economic 
+                training, and institutional knowledge to the role. A fiscal conservative, he has helped hold the line on county taxes for three consecutive 
+                years while supporting projects aimed at improving Cumberland’s historically low rankings in health, literacy, and household income.
+                <br>
+                <br>
+                His 2025 agenda continues to emphasize budget discipline, targeted economic growth, and practical infrastructure upgrades. Key priorities 
+                include advancing the Nabb Avenue Extension to boost commercial development, completing the stalled Middle Mile broadband network to expand 
+                rural internet access, and overseeing responsible use of county facilities and capital projects—including the future of the county jail site. 
+                As liaison to the Cumberland County Library, he has also championed the largest renovation in four decades, expanding community programs and 
+                tech access.
+                <br>
+                <br>
+                Albrecht’s positions reflect a blend of local problem-solving and cautious long-term planning—favoring shared services over tax hikes, 
+                incentives over eminent domain, and modernization without abandoning core services. While recent changes to GOP breakfast meetings have 
+                reduced one avenue for public access, his willingness to engage in extended interviews has given voters a detailed look at his record and 
+                plans well ahead of November.
+                <br>
+                <br>
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              </p>
             </div>
         </dialog>
         <dialog id="Modal2" class="modal">
