--- a/child_pages/cc-elections/Candidates/mcginty.html
+++ b/child_pages/cc-elections/Candidates/mcginty.html
@@ -137,9 +137,23 @@
               <h6 class="page-title">Thomas McGinty</h6>
               <p>          
 
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
+                <p> Thomas McGinty is running for Millville City Commissioner on a practical platform of cleanup, safety, and redevelopment. A lifelong 
+                    Millville resident, he brings decades of experience as a geologist and NJDEP federal case manager in hazardous-site remediation, plus 
+                    frontline leadership as a retired NJDOC lieutenant. Early in the campaign he answered a detailed questionnaire, completed a 2.5-hour 
+                    podcast, and sat for a full radio interview—giving voters a clear sense of his background, governing style, and priorities. 
+                    <br> <br> 
+                    His 2025 agenda centers on converting legacy industrial parcels—especially the Wheaton property—into brownfield-ready sites and then 
+                    doing the administrative push to land tenants. He pairs that with strengthening public safety and recruitment (including visible walking 
+                    patrols and better inter-agency coordination), tighter code enforcement and fair/open bidding, and setting predictable service standards 
+                    at City Hall. McGinty also wants Millville to leverage the Maurice River’s eco-tourism potential and advance long-discussed access 
+                    improvements like the Outer Connector/Nabb Avenue Extension to better link jobs, the airport, and industrial corridors. He frames himself 
+                    as a team-first, “nuts-and-bolts” commissioner focused on execution rather than titles. 
+                    <br> <br> Transparency and accessibility are currently <em>above average</em> by local norms, thanks to early, substantive engagement. 
+                    To reach a top-tier standard, he has signaled interest in a clean campaign site with issue-by-issue pages, a public calendar of 
+                    appearances, documented Q&amp;A and interviews, and measurable milestones for brownfields, blight/code benchmarks, and youth-safety 
+                    initiatives. If those pieces are delivered and kept current, voters will be able to track both plans and follow-through in one place. 
+                    <br> <br> 
+                    Click the red x at the top of this box and then scroll down down for more in-depth information and sources. </p>
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
