--- a/child_pages/cc-elections/Candidates/miletta_linda.html
+++ b/child_pages/cc-elections/Candidates/miletta_linda.html
@@ -209,7 +209,7 @@
         </div>
     </div>
 
-    <br><br>
+    <br>
 
     <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
@@ -226,7 +226,7 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
         <button class="candidate-ext-site">Transparency Standards Explained</button>
         </a>
-        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div>
 
@@ -319,7 +319,7 @@
         </ul>
         </div>
 
-        <br><br>
+        <br>
 
         <h4 class="sub-heading">Background and Experience</h4>
         <div class="experience can-sec">
@@ -358,6 +358,39 @@
                 <p>
                 Notes her role as a township taxpayer and commitment to fiscal responsibility and maximizing value in district spending.
                 </p>
+            </details>
+            </li>
+        </ul>
+        </div>
+
+        <h4 class="sub-heading">Source Material</h4>
+        <div class="experience can-sec">
+        <ul>
+            <li>
+            <details open>
+                <summary style="color: blue;"><strong>Original Candidate Email Submission (August 20, 2025)</strong></summary>
+                <div class="source-doc" style="background:#fafafa; border:1px solid #ddd; padding:12px 16px; border-radius:8px;">
+                <pre style="white-space: pre-wrap; margin: 0; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, 'Liberation Mono', monospace; font-size: 0.95em; line-height: 1.35;">
+                    August 20, 2025
+                    Dear Community Members,
+                        My name is Linda Miletta, and I am excited to announce my candidacy for re-election for Lawrence Township School Board. As a lifelong educator, active community volunteer, dedicated parent, and proud township resident, I believe I bring a unique and balanced perspective to the challenges and opportunities facing our schools.
+                        For the past 25 years, I have served as a public-school teacher, working directly with students, families, and colleagues to foster meaningful learning and academic growth. I understand the day-to-day realities of our classrooms—what our students need to succeed, what our teachers need to thrive, and how policy decisions affect both.  I am passionate about public education and I can contribute to an environment where all students can thrive. 
+                        I am also a mother to a school-aged child whom is a recent graduate of our district. I know firsthand what it means to entrust our schools with the care and education of our children. Like you, I want to ensure our schools are safe, inclusive, and academically rigorous.
+                        Beyond the classroom and home, I actively volunteer in our community and proudly support local initiatives. I am a Lifetime Member and Captain/EMT of Lawrence Twp. EMS, an active member of the Lawrence Twp. Parade &amp; Events Committee, The Myron L. Powell Early Childhood Advisory Committee, and Lawrence Twp. Recreation.  I am also a township taxpayer who believes in fiscal responsibility and maximizing the value of every dollar spent in our district. My husband, an active member of our community as well, also shares my commitment to public service and civic engagement.
+                        If re-elected, I will strive to:
+                    Represent the community’s interests in educational matters
+                    Positively impact student achievement
+                    Ensure responsible financial stewardship
+                    Shape educational policy and curriculum
+                    Ensure efficient and effective school operations
+                    Provide leadership and direction
+                    Engage with the community and strengthen school-community ties
+                        I would be honored to earn your trust and your vote. Together, we can continue building a school district that reflects the strengths, values, and hopes of our entire community. We’re in this together!
+                    With gratitude,
+                    Linda Miletta
+                    Candidate for Lawrence Twp. School Board
+                </pre>
+                </div>
             </details>
             </li>
         </ul>
