adding fairfield township committee race

--- a/child_pages/cc-elections/Candidates/pierce.html
+++ b/child_pages/cc-elections/Candidates/pierce.html
@@ -9,10 +9,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Darlington Henry">
-        <meta property="og:description" content="Election information about Darlington Henry">
+        <meta property="og:title" content="Inform The Vote NJ - Marvin R Pierce">
+        <meta property="og:description" content="Election information about Marvin R Pierce">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/henry">
+        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/pierce">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
@@ -138,7 +138,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Darlington Henry</h6>
+              <h6 class="page-title">Marvin R Pierce</h6>
               <p>          
 
                 As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
@@ -157,7 +157,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">Darlington Henry</h6>
+              <h6 class="page-title">Marvin R Pierce</h6>
               <p>          
 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -172,7 +172,7 @@
     
 
      <div class="title-info">
-        <h2>Darlington Henry</h2>
+        <h2>Marvin R Pierce</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Fairfield Township Committee</div>
@@ -198,15 +198,15 @@
              </div>
 
              <div class="animal-box">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/independent.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/democrat.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
