--- a/child_pages/cc-elections/commercial_township_committee.html
+++ b/child_pages/cc-elections/commercial_township_committee.html
@@ -228,7 +228,7 @@
                                     <p>Vote for One</p>
                                 </div>
                                 <div class="ot-espanol">
-                                    <p>Comité del municipio de Lawrence</p>
+                                    <p>Comité del municipio de Commercial</p>
                                     <p>Vota por Uno</p>
                                 </div>
                             </div>
