--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                             <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/fairfield_township_committee.html">Fairfield Township Committee</a></li>
+
                                 <li class="link"><a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <!-- <li class="link"><a href="child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
@@ -115,6 +117,8 @@
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
                                 <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="child_pages/cc-elections/fairfield_township_committee.html">Fairfield Township Issues</a></li>
+
                                 <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
@@ -327,6 +331,8 @@
                     <div class="elections-dropdown-links">
                         <!-- <a href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots Page</a> -->
                         <a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a>
+                        <a href="child_pages/cc-elections/fairfield_township_committee.html">Fairfield Township Committee</a>
+
                         <a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a>
                         <!-- <a href="child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a>
                         <a href="child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a>
@@ -361,6 +367,8 @@
                 <div class="nav-buttons-3">
                     <div class="county-dropdown-links">
                         <a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a>
+                        <a href="child_pages/cc-elections/fairfield_township_.html">Cumberland County Issues</a>
+
                         <a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a>
                         <a href="child_pages/cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a>
                         <a href="child_pages/cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a>
